--- a/t.html
+++ b/t.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
 <html>
+	<link rel="stylesheet" href="vector.css"> 
 
 
-
-<body onbeforeunload="alert();">
-
+<body >
 
 
-
-	<script>
-		
-window.addEventListener('beforeunload', (event) => {
-	event.returnValue = `Are you sure you want to leave?`;
-	var xhttp = new XMLHttpRequest();
-		xhttp.open("GET", "http://d4d6-2409-4073-4e92-9a2d-2566-4ccd-5926-3876.ngrok.io");
-xhttp.send(); 
-});
-
-	</script>
+	<div class="default-profile-image">
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+	  </div>
+	  
 </body>
 
 </html>
